add scroll in div days

--- a/style/index.css
+++ b/style/index.css
@@ -43,7 +43,8 @@ button:hover{
 #form-habits{
     display: flex;
     padding: 210px 5vw 48px;
-    width: fit-content;
+    /* width: 100vw; */
+    /* width: fit-content; */
 }
 
 .habits{
@@ -51,6 +52,7 @@ button:hover{
     display: flex;
     flex-direction: column;
     gap: 24px;
+    width: 3vw;
 }
 
 .habit{
@@ -66,6 +68,14 @@ button:hover{
     display: flex;
     gap: 48px;
     margin-left: 32px;
+    padding-bottom: 2rem;
+    /* background: red; */
+    width: 90vw;
+    overflow-x: scroll;
+}
+
+.days::-webkit-scrollbar{
+    display: none;
 }
 
 .day{
