--- a/style/index.css
+++ b/style/index.css
@@ -49,6 +49,7 @@ button:hover{
 
 .habits{
     margin-top: 58px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -75,7 +76,13 @@ button:hover{
 }
 
 .days::-webkit-scrollbar{
-    display: none;
+    height: 10px;
+    background-color: transparent;
+}
+
+.days::-webkit-scrollbar-thumb{
+    background-color: #8b5cf6;
+    border-radius: 50px;
 }
 
 .day{
